# hell-1

./: README.md  bad.hell  demo.hell  hell.cabal  package.yaml  stack.yaml  test.hs
app/: Main.hs
examples/: 111-js.hell  shell.hs
src/: Hell.hs
src/Hell/: Interpreter.hs  Lexer.hs  Parser.hs  Types.hs
test/: Main.hs
