name:                hell
version:             0.0.0
homepage:            https://github.com/chrisdone/hell#readme
license:             BSD3
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2018 Chris Done
category:            Shell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Hell
                       Hell.Types
                       Hell.Lexer
                       Hell.Interpreter
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       conduit,
                       conduit-extra,
                       containers,
                       process,
                       typed-process,
                       directory,
                       transformers,
                       mtl,
                       async,
                       megaparsec,
                       text,
                       criterion
  default-language:    Haskell2010

executable hell
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:       base
                     , hell
                     , optparse-applicative
                     , bytestring,
                       conduit,
                       conduit-extra,
                       process,
                       typed-process,
                       directory,
                       transformers,
                       mtl,
                       async,
                       megaparsec,
                       text,
                       criterion,
                       optparse-simple,
                       aeson
  default-language:    Haskell2010

test-suite hell-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  ghc-options:         -Wall -O0
  build-depends:       base
                     , hell
                     , hspec
                     , optparse-applicative
                     , bytestring,
                       conduit,
                       conduit-extra,
                       process,
                       typed-process,
                       directory,
                       transformers,
                       mtl,
                       async,
                       megaparsec,
                       text,
                       criterion
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisdone/hell
